# aniplot

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  aniplot.cpp  aniplot_example.cpp  aniplotlib.cpp  aniplotlib.h  build64-linux-and-macos.sh  build64-linux.sh  build64-macosx-example.sh  build64-macosx.sh  build64-vc-example.bat  build64-vc.bat  build64-vc12-2013.bat  build64-vc12.bat  build64-vc14-2015.bat  build64-vc14.bat  build64-vc15-2017-example.bat  build64-vc15-2017.bat  build64-vc2019.bat  imgui_textwrap.h  imgui_unitybuild.cpp  main.cpp  memfile.h  mip_buf_t.h  pool_t.h  protocol.h
lib/imgui/: imconfig.h
tools/: udp-stream-test-simpleton.py  udp-stream-test.py
